--- a/i18n/bo/general/en_GB.xml
+++ b/i18n/bo/general/en_GB.xml
@@ -3,7 +3,7 @@
   <key id="module-name">contact cards</key>
   <key id="tree-root-name">contact cards</key>
   <key id="system-folder-name">contact cards</key>
-  <key id="contactnotpublished">this contact is not in published status, it won't be displayed online</key>
-  <key id="contactformpagenotpublished">this link goes to a not published page, it won't be displayed online</key>
+  <key id="contactnotpublished">this contact is not in published status, it will not be displayed on the website</key>
+  <key id="contactformpagenotpublished">this link points to a page that is not published, it will not be displayed on the website</key>
   <key id="defaultlabel">contact card</key>
 </i18n>
