--- a/i18n/bo/tags/en_GB.xml
+++ b/i18n/bo/tags/en_GB.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <i18n baseKey="m.contactcard.bo.tags" lcid="en_GB">
-  <key id="contact-block">Contact's detail</key>
+  <key id="contact-block">Contact's details</key>
 </i18n>
