--- a/i18n/bo/actions/en_GB.xml
+++ b/i18n/bo/actions/en_GB.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <i18n baseKey="m.contactcard.bo.actions" lcid="en_GB">
   <key id="create-contact">create a contact card</key>
-  <key id="create_">create...</key>
+  <key id="create_">Create…</key>
 </i18n>
