--- a/i18n/document/contact/en_GB.xml
+++ b/i18n/document/contact/en_GB.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <i18n baseKey="m.contactcard.document.contact" lcid="en_GB">
-  <key id="label-help">company or office name</key>
-  <key id="name">office</key>
-  <key id="name-help">lastname and firstname</key>
+  <key id="label-help">Organisation, company, or department name.</key>
+  <key id="name">company</key>
+  <key id="name-help">Last name and first name.</key>
   <key id="address1">address</key>
-  <key id="address1-help">contact address</key>
-  <key id="address2">complement of address</key>
-  <key id="address2-help">complement of contact's address</key>
-  <key id="zipcode">zipcode</key>
+  <key id="address1-help">Postal address of the contact.</key>
+  <key id="address2">address complement</key>
+  <key id="address2-help">Complement of the contact's address.</key>
+  <key id="zipcode">postal code</key>
   <key id="city">city</key>
   <key id="country">country</key>
   <key id="title">title</key>
   <key id="function">function</key>
   <key id="photo">photo</key>
   <key id="phone">phone</key>
-  <key id="post">post</key>
-  <key id="post-help">post phone number</key>
+  <key id="post">tel. extension</key>
+  <key id="post-help">Telephone extension number.</key>
   <key id="fax">fax</key>
-  <key id="mails">mails</key>
-  <key id="mails-help">e-mail addresses should be separated with a comma (,)</key>
-  <key id="lastname">lastname</key>
-  <key id="firstname">firstname</key>
-  <key id="communicationlanguage">language</key>
-  <key id="indexingstatus">indexation</key>
+  <key id="mails">email addresses</key>
+  <key id="mails-help">Email addresses should be separated with a comma (,).</key>
+  <key id="lastname">last name</key>
+  <key id="firstname">first name</key>
+  <key id="communicationlanguage">communication language</key>
+  <key id="indexingstatus">indexing</key>
+  <key id="document-name">contact card</key>
+  <key id="label">label</key>
 </i18n>
