--- a/i18n/frontoffice/en_GB.xml
+++ b/i18n/frontoffice/en_GB.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <i18n baseKey="m.contactcard.frontoffice" lcid="en_GB">
-  <key id="office">company</key>
+  <key id="office">office</key>
   <key id="function">function</key>
   <key id="phone">phone</key>
-  <key id="post">post</key>
+  <key id="post">tel. extension</key>
   <key id="address">address</key>
   <key id="contact">contact</key>
   <key id="fax">fax</key>
-  <key id="contactme">send a mail to this contact</key>
-  <key id="contactnamed">send a mail to {name}</key>
+  <key id="contactme">send mail to this contact</key>
+  <key id="contactnamed">send mail to {name}</key>
   <key id="order-by">Order by</key>
   <key id="order-by-direction">And by</key>
-  <key id="order-by-asc">order by asc</key>
-  <key id="order-by-desc">order by desc</key>
-  <key id="submit">Submit</key>
-  <key id="no-contact">Sorry, there is nobody in group photo with the function {functions} in company {companyname}</key>
+  <key id="order-by-asc">ascending order</key>
+  <key id="order-by-desc">descending order</key>
+  <key id="submit">Apply filters</key>
+  <key id="no-contact">Sorry, there is nobody in the photo collection with the {functions} function in company {companyname}</key>
 </i18n>
