--- a/i18n/frontoffice/de_DE.xml
+++ b/i18n/frontoffice/de_DE.xml
@@ -7,6 +7,7 @@
   <key id="address">Adresse</key>
   <key id="contact">Kontakt</key>
   <key id="fax">Fax</key>
+  <key id="website">Webseite</key>
   <key id="contactme">Diesem Kontakt eine E-mail schicken</key>
   <key id="contactnamed">{name} eine E-mail schicken</key>
 </i18n>
