[NEW] Merge with 3.6

--- a/i18n/document/contact/de_DE.xml
+++ b/i18n/document/contact/de_DE.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <i18n baseKey="m.contactcard.document.contact" lcid="de_DE">
-  <key id="document-name">Kontaktkarte</key>
-  <key id="label">Name</key>
-  <key id="label-help">Name der Organisation, der Firma oder des Dienstes</key>
-  <key id="name">Firma</key>
-  <key id="name-help">Nach- und Vorname</key>
-  <key id="address1">Adresse</key>
-  <key id="address1-help">Postanschrift des Kontaktes</key>
-  <key id="address2">Adressezusatz</key>
-  <key id="address2-help">Postanschriftzusatz des Kontaktes</key>
-  <key id="zipcode">PLZ</key>
-  <key id="city">Stadt</key>
-  <key id="country">Land</key>
-  <key id="title">Anrede</key>
-  <key id="function">Funktion</key>
-  <key id="photo">Bild</key>
-  <key id="phone">Telefon</key>
-  <key id="post">Durchwahl</key>
-  <key id="post-help">Telefondurchwahl</key>
-  <key id="fax">Fax</key>
-  <key id="mails">E-mails</key>
-  <key id="mails-help">E-mailadressen müssen durch Kommas getrennt werden (,)</key>
-  <key id="lastname">Nachname</key>
-  <key id="firstname">Vorname</key>
-  <key id="communicationlanguage">Sprache</key>
-  <key id="indexingstatus">Indexierung</key>
+	<key id="document-name">Kontaktkarte</key>
+	<key id="label">Name</key>
+	<key id="label-help">Name der Organisation, der Firma oder des Dienstes</key>
+	<key id="name">Firma</key>
+	<key id="name-help">Nach- und Vorname</key>
+	<key id="address1">Adresse</key>
+	<key id="address1-help">Postanschrift des Kontaktes</key>
+	<key id="address2">Adressezusatz</key>
+	<key id="address2-help">Postanschriftzusatz des Kontaktes</key>
+	<key id="zipcode">PLZ</key>
+	<key id="city">Stadt</key>
+	<key id="country">Land</key>
+	<key id="title">Anrede</key>
+	<key id="function">Funktion</key>
+	<key id="photo">Bild</key>
+	<key id="phone">Telefon</key>
+	<key id="post">Durchwahl</key>
+	<key id="post-help">Telefondurchwahl</key>
+	<key id="fax">Fax</key>
+	<key id="mails">E-mails</key>
+	<key id="mails-help">E-mailadressen müssen durch Kommas getrennt werden (,)</key>
+	<key id="lastname">Nachname</key>
+	<key id="firstname">Vorname</key>
+	<key id="communicationlanguage">Sprache</key>
+	<key id="indexingstatus">Indexierung</key>
+	<key id="websiteurl">URL der Webseite URL</key>
+	<key id="allowcontact">Kontakt aktivieren</key>
+	<key id="contactpage">contact page</key>
 </i18n>
