--- a/i18n/document/contact/en_GB.xml
+++ b/i18n/document/contact/en_GB.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <i18n baseKey="m.contactcard.document.contact" lcid="en_GB">
-  <key id="label-help">Organisation, company, or department name.</key>
-  <key id="name">company</key>
-  <key id="name-help">Last name and first name.</key>
-  <key id="address1">address</key>
-  <key id="address1-help">Postal address of the contact.</key>
-  <key id="address2">address complement</key>
-  <key id="address2-help">Complement of the contact's address.</key>
-  <key id="zipcode">postal code</key>
-  <key id="city">city</key>
-  <key id="country">country</key>
-  <key id="title">title</key>
-  <key id="function">function</key>
-  <key id="photo">photo</key>
-  <key id="phone">phone</key>
-  <key id="post">tel. extension</key>
-  <key id="post-help">Telephone extension number.</key>
-  <key id="fax">fax</key>
-  <key id="mails">email addresses</key>
-  <key id="mails-help">Email addresses should be separated with a comma (,).</key>
-  <key id="lastname">last name</key>
-  <key id="firstname">first name</key>
-  <key id="communicationlanguage">communication language</key>
-  <key id="indexingstatus">indexing</key>
-  <key id="document-name">contact card</key>
-  <key id="label">label</key>
+	<key id="label-help">Organisation, company, or department name.</key>
+	<key id="name">company</key>
+	<key id="name-help">Last name and first name.</key>
+	<key id="address1">address</key>
+	<key id="address1-help">Postal address of the contact.</key>
+	<key id="address2">address complement</key>
+	<key id="address2-help">Complement of the contact's address.</key>
+	<key id="zipcode">postal code</key>
+	<key id="city">city</key>
+	<key id="country">country</key>
+	<key id="title">title</key>
+	<key id="function">function</key>
+	<key id="photo">photo</key>
+	<key id="phone">phone</key>
+	<key id="post">tel. extension</key>
+	<key id="post-help">Telephone extension number.</key>
+	<key id="fax">fax</key>
+	<key id="mails">email addresses</key>
+	<key id="mails-help">Email addresses should be separated with a comma (,).</key>
+	<key id="lastname">last name</key>
+	<key id="firstname">first name</key>
+	<key id="communicationlanguage">communication language</key>
+	<key id="indexingstatus">indexing</key>
+	<key id="document-name">contact card</key>
+	<key id="label">label</key>
+	<key id="websiteurl">website URL</key>
+	<key id="allowcontact">enable contact link</key>
+	<key id="contactpage">contact page</key>
 </i18n>
