--- a/i18n/bo/doceditor/fieldsgroup/fr_FR.xml
+++ b/i18n/bo/doceditor/fieldsgroup/fr_FR.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <i18n baseKey="m.contactcard.bo.doceditor.fieldsgroup" lcid="fr_FR">
-  <key id="postal">adresse postale</key>
-  <key id="phone">coordonnées téléphoniques</key>
+	<key id="postal">adresse postale</key>
+	<key id="phone">coordonnées téléphoniques/site web</key>
 </i18n>
